--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
       <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden"></div>
       <div id="chatContainer" class="hidden">
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-1/2 mb-4 rounded hover:bg-red-600 transition-colors hidden">New Session</button>
+        <div class="button-group">
+          <button id="button1">Button 1</button>
+          <button id="button2">Button 2</button>
+          <button id="button3">Button 3</button>
+          <button id="copyCodeButton">Copy Code</button>
+        </div>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
         <div class="input-container hidden">
           <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000"></textarea>
