--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     #copyCodeButton {
       background-color: #10b981;
       color: white;
-      width: 25%;
+      width: 50%;
     }
     #copyCodeButton:hover {
       background-color: #059669;
@@ -194,7 +194,7 @@
     #button1 {
       background-color: #9b59b6;
       color: white;
-      width: 25%; /* One-third of remaining 50% */
+      width: 50%; /* One-third of remaining 50% */
     }
     #button1:hover {
       background-color: #8e44ad;
@@ -202,7 +202,7 @@
     #button2 {
       background-color: #f1c40f;
       color: white;
-      width: 25%; /* One-third of remaining 50% */
+      width: 50%; /* One-third of remaining 50% */
     }
     #button2:hover {
       background-color: #d4a017;
@@ -210,7 +210,7 @@
     #button3 {
       background-color: #e67e22;
       color: white;
-      width: 25%; /* One-third of remaining 50% */
+      width: 50%; /* One-third of remaining 50% */
     }
     #button3:hover {
       background-color: #d35400;
@@ -246,8 +246,8 @@
       <div id="chatContainer" class="hidden">
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-1/2 mb-4 rounded hover:bg-red-600 transition-colors hidden">New Session</button>
         <div class="button-group">
-          <button id="button1">Button 1</button>
-          <button id="button2">Button 2</button>
+          <button id="button1">Send Code to Random Chat</button>
+          <button id="button2">Goto Random Chat Page</button>
           <button id="button3">Button 3</button>
           <button id="copyCodeButton">Copy Code</button>
         </div>
