--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     #button1 {
       background-color: #9b59b6;
       color: white;
-      width: 50%; /* One-third of remaining 50% */
+      width: 25%; /* Half of remaining 50% */
     }
     #button1:hover {
       background-color: #8e44ad;
@@ -202,18 +202,10 @@
     #button2 {
       background-color: #f1c40f;
       color: white;
-      width: 50%; /* One-third of remaining 50% */
+      width: 25%; /* Half of remaining 50% */
     }
     #button2:hover {
       background-color: #d4a017;
-    }
-    #button3 {
-      background-color: #e67e22;
-      color: white;
-      width: 50%; /* One-third of remaining 50% */
-    }
-    #button3:hover {
-      background-color: #d35400;
     }
     @media (max-width: 640px) {
       .button-group {
@@ -248,7 +240,6 @@
         <div class="button-group">
           <button id="button1">Send Code to Random Chat</button>
           <button id="button2">Goto Random Chat Page</button>
-          <button id="button3">Button 3</button>
           <button id="copyCodeButton">Copy Code</button>
         </div>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
