--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     #copyCodeButton {
       background-color: #10b981;
       color: white;
-      width: 50%;
+      width: 33.3%;
     }
     #copyCodeButton:hover {
       background-color: #059669;
@@ -194,7 +194,7 @@
     #button1 {
       background-color: #9b59b6;
       color: white;
-      width: 25%; /* Half of remaining 50% */
+      width: 33.3%; /* Half of remaining 50% */
     }
     #button1:hover {
       background-color: #8e44ad;
@@ -202,7 +202,7 @@
     #button2 {
       background-color: #f1c40f;
       color: white;
-      width: 25%; /* Half of remaining 50% */
+      width: 33.3%; /* Half of remaining 50% */
     }
     #button2:hover {
       background-color: #d4a017;
@@ -239,7 +239,7 @@
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-1/2 mb-4 rounded hover:bg-red-600 transition-colors hidden">New Session</button>
         <div class="button-group">
           <button id="button1">Send Code to Random Chat</button>
-          <button id="button2">Goto Random Chat Page</button>
+          <button id="button2">Pick Random Code</button>
           <button id="copyCodeButton">Copy Code</button>
         </div>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
