--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       </div>
       <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden"></div>
       <div id="chatContainer" class="hidden">
-        <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-1 mb-4 rounded hover:bg-red-600 transition-colors hidden">New Session</button>
+        <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 rounded hover:bg-red-600 transition-colors hidden">New Session</button>
         <div class="button-group">
           <button id="button1">Send Code to Random Chat</button>
           <button id="button2">Pick Random Code</button>
