--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     body {
       min-height: 100vh;
-      padding-top: 130px; /* Increased top padding to create more space above white box */
+      padding-top: 100px; /* Increased top padding to create more space above white box */
     }
 
     #messages {
@@ -238,8 +238,8 @@
       <div id="chatContainer" class="hidden">
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 rounded hover:bg-red-600 transition-colors hidden">New Session</button>
         <div class="button-group">
-          <button id="button1">Send Code to Random Chat</button>
-          <button id="button2">Pick Random Code</button>
+          <button id="button1">Send Code to Random Page</button>
+          <button id="button2">Pick Random Code to Chat</button>
           <button id="copyCodeButton">Copy Code</button>
         </div>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
