--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
 
     // Redirect to random.html when clicking "Pick Random Code to Chat"
     document.getElementById('button2').onclick = () => {
-      window.location.href = 'https://raw.githubusercontent.com/Cooptroop1/anonmess/refs/heads/main/random.html';
+      window.location.href = 'https://github.com/Cooptroop1/anonmess/blob/main/random.html';
     };
   </script>
 </body>
