--- a/index.html
+++ b/index.html
@@ -348,6 +348,12 @@
       if (socket.readyState === WebSocket.OPEN) {
         socket.send(JSON.stringify({ type: 'connect', clientId }));
       }
+      // Check for code parameter on page load
+      const urlParams = new URLSearchParams(window.location.search);
+      const codeParam = urlParams.get('code');
+      if (codeParam && validateCode(codeParam)) {
+        autoConnect(codeParam);
+      }
     };
 
     socket.onerror = (error) => {
@@ -1038,10 +1044,33 @@
       }
     };
 
-    // Redirect to random.html when clicking "Pick Random Code to Chat"
     document.getElementById('button2').onclick = () => {
       window.location.href = 'https://anonomoose.com/random.html';
     };
+
+    // Function to handle automatic connection with a code parameter
+    function autoConnect(codeParam) {
+      connectContainer.classList.remove('hidden');
+      initialContainer.classList.add('hidden');
+      document.getElementById('usernameConnectInput').value = username || '';
+      document.getElementById('codeInput').value = codeParam;
+      username = document.getElementById('usernameConnectInput').value.trim();
+      code = codeParam;
+      if (validateUsername(username) && validateCode(code)) {
+        codeDisplayElement.textContent = `Using code: ${code}`;
+        codeDisplayElement.classList.remove('hidden');
+        copyCodeButton.classList.remove('hidden');
+        connectContainer.classList.add('hidden');
+        chatContainer.classList.remove('hidden');
+        messages.classList.add('waiting');
+        statusElement.textContent = 'Waiting for connection...';
+        if (socket.readyState === WebSocket.OPEN) {
+          socket.send(JSON.stringify({ type: 'join', code, clientId, username }));
+        }
+      } else {
+        statusElement.textContent = 'Invalid username or code format.';
+      }
+    }
   </script>
 </body>
 </html>
