--- a/index.html
+++ b/index.html
@@ -207,11 +207,6 @@
     #button2:hover {
       background-color: #d4a017;
     }
-    #button2:disabled {
-      background-color: #d4a017;
-      opacity: 0.6;
-      cursor: not-allowed;
-    }
     @media (max-width: 640px) {
       .button-group {
         flex-direction: column;
@@ -314,7 +309,6 @@
     let username = localStorage.getItem('username') || '';
     let usernames = new Map();
     const messageRateLimits = new Map();
-    let codeSentToRandom = false; // Track if code was sent to random board
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
@@ -328,7 +322,6 @@
     const inputContainer = document.querySelector('.input-container');
     const messages = document.getElementById('messages');
     const cornerLogo = document.getElementById('cornerLogo');
-    const button2 = document.getElementById('button2');
     statusElement.textContent = 'Start a new chat or connect to an existing one';
     document.getElementById('usernameInput').value = username;
     document.getElementById('usernameConnectInput').value = username;
@@ -409,8 +402,6 @@
             maxClientsContainer.classList.add('hidden');
             inputContainer.classList.add('hidden');
             messages.classList.remove('waiting');
-            codeSentToRandom = false;
-            button2.disabled = false;
           }
           return;
         }
@@ -525,6 +516,27 @@
         maxClients = Math.min(n, 10); // Cap at 10
         socket.send(JSON.stringify({ type: 'set-max-clients', maxClients: maxClients, code, clientId }));
         updateMaxClientsUI();
+        // Prompt user to choose how to share the code
+        if (confirm('Do you want to send this code to the random board for more connections? Click Cancel to share manually (code will be copied to clipboard).')) {
+          if (socket.readyState === WebSocket.OPEN && code) {
+            socket.send(JSON.stringify({ type: 'submit-random', code, clientId }));
+            statusElement.textContent = `Sent code ${code} to random board.`;
+            setTimeout(() => {
+              statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} connections)` : 'Waiting for connection...';
+            }, 2000);
+          }
+        } else {
+          const codeText = codeDisplayElement.textContent.replace('Your code: ', '').replace('Using code: ', '');
+          navigator.clipboard.writeText(codeText).then(() => {
+            statusElement.textContent = 'Code copied to clipboard for manual sharing.';
+            setTimeout(() => {
+              statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} connections)` : 'Waiting for connection...';
+            }, 2000);
+          }).catch(err => {
+            console.error('Failed to copy text: ', err);
+            statusElement.textContent = 'Failed to copy code. Please copy it manually.';
+          });
+        }
       }
     }
 
@@ -1006,8 +1018,6 @@
       maxClientsContainer.classList.add('hidden');
       inputContainer.classList.add('hidden');
       messages.classList.remove('waiting');
-      codeSentToRandom = false;
-      button2.disabled = false;
     };
 
     document.getElementById('usernameInput').addEventListener('keydown', (event) => {
@@ -1050,17 +1060,13 @@
         setTimeout(() => {
           statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} connections)` : 'Waiting for connection...';
         }, 2000);
-        codeSentToRandom = true;
-        button2.disabled = true;
       } else {
         statusElement.textContent = 'Cannot send: Not initiator, no code, or room is full.';
       }
     };
 
     document.getElementById('button2').onclick = () => {
-      if (!button2.disabled) {
-        window.location.href = 'https://anonomoose.com/random.html';
-      }
+      window.location.href = 'https://anonomoose.com/random.html';
     };
 
     // Function to handle automatic connection with a code parameter
