--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     body {
       min-height: 100vh;
-      padding-top: 40px; /* Increased top padding to create more space above white box */
+      padding-top: 40px; /* Consistent top padding for both PC and mobile */
     }
 
     #messages {
@@ -66,15 +66,31 @@
     }
     @media (max-width: 640px) {
       .corner-logo {
-        position: absolute;
+        position: fixed;
         top: 10px;
         right: 10px;
         width: 128px;
         height: 128px;
-        z-index: 100; /* Ensure it stays above but scrolls with page */
+        z-index: 1000; /* Ensure it stays above all content */
       }
-      body {
-        padding-top: 180px; /* Increased top padding for mobile to give more space */
+      #maxClientsContainer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        margin: 0;
+        padding: 0.5rem;
+        background-color: rgba(0, 0, 0, 0.8);
+        border-top: 1px solid #4a5568;
+        z-index: 1000;
+      }
+      #maxClientsRadios {
+        flex-direction: row;
+        justify-content: center;
+        gap: 1rem;
+      }
+      #maxClientsRadios label {
+        margin: 0;
       }
     }
     .message-bubble {
@@ -111,7 +127,7 @@
       display: flex;
       align-items: flex-start;
       gap: 0.5rem;
-      padding: 0 0rem;    /* Changed from 0 1rem to 0 2rem to match p-8 padding */
+      padding: 0 0rem;
       position: absolute;
       bottom: -3rem;
       width: 100%;
@@ -127,12 +143,12 @@
       height: 2.5rem;
       max-height: 12.5rem;
       line-height: 1.5rem;
-      width: 100%;        /* Changed from 110% to 100% to match container width */
-      max-width: 100%;    /* Changed from 110% to 100% to match container width */
+      width: 100%;
+      max-width: 100%;
       background-color: #3b82f6;
       color: white;
       border-radius: 1rem;
-      padding: 0.5rem 1rem; /* Keep padding to match #messages internal spacing */
+      padding: 0.5rem 1rem;
       border: none;
       box-sizing: border-box;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -182,11 +198,11 @@
       margin: 0 0.25rem;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       transition: all 0.2s ease;
+      width: 33.3%;
     }
     #copyCodeButton {
       background-color: #10b981;
       color: white;
-      width: 33.3%;
     }
     #copyCodeButton:hover {
       background-color: #059669;
@@ -194,7 +210,6 @@
     #button1 {
       background-color: #9b59b6;
       color: white;
-      width: 33.3%; /* Half of remaining 50% */
     }
     #button1:hover {
       background-color: #8e44ad;
@@ -202,19 +217,23 @@
     #button2 {
       background-color: #f1c40f;
       color: white;
-      width: 33.3%; /* Half of remaining 50% */
     }
     #button2:hover {
       background-color: #d4a017;
     }
+    #button2:disabled {
+      background-color: #d4a017;
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
     @media (max-width: 640px) {
       .button-group {
-        flex-direction: column;
-        align-items: stretch;
+        display: flex;
+        justify-content: space-between;
       }
       .button-group button {
-        width: 100%;
-        margin-bottom: 0.5rem;
+        width: 33.3%;
+        margin-bottom: 0;
       }
     }
   </style>
@@ -309,6 +328,7 @@
     let username = localStorage.getItem('username') || '';
     let usernames = new Map();
     const messageRateLimits = new Map();
+    let codeSentToRandom = false; // Track if code was sent to random board
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
@@ -322,6 +342,7 @@
     const inputContainer = document.querySelector('.input-container');
     const messages = document.getElementById('messages');
     const cornerLogo = document.getElementById('cornerLogo');
+    const button2 = document.getElementById('button2');
     statusElement.textContent = 'Start a new chat or connect to an existing one';
     document.getElementById('usernameInput').value = username;
     document.getElementById('usernameConnectInput').value = username;
@@ -402,6 +423,8 @@
             maxClientsContainer.classList.add('hidden');
             inputContainer.classList.add('hidden');
             messages.classList.remove('waiting');
+            codeSentToRandom = false;
+            button2.disabled = false;
           }
           return;
         }
@@ -516,27 +539,6 @@
         maxClients = Math.min(n, 10); // Cap at 10
         socket.send(JSON.stringify({ type: 'set-max-clients', maxClients: maxClients, code, clientId }));
         updateMaxClientsUI();
-        // Prompt user to choose how to share the code
-        if (confirm('Do you want to send this code to the random board for more connections? Click Cancel to share manually (code will be copied to clipboard).')) {
-          if (socket.readyState === WebSocket.OPEN && code) {
-            socket.send(JSON.stringify({ type: 'submit-random', code, clientId }));
-            statusElement.textContent = `Sent code ${code} to random board.`;
-            setTimeout(() => {
-              statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} connections)` : 'Waiting for connection...';
-            }, 2000);
-          }
-        } else {
-          const codeText = codeDisplayElement.textContent.replace('Your code: ', '').replace('Using code: ', '');
-          navigator.clipboard.writeText(codeText).then(() => {
-            statusElement.textContent = 'Code copied to clipboard for manual sharing.';
-            setTimeout(() => {
-              statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} connections)` : 'Waiting for connection...';
-            }, 2000);
-          }).catch(err => {
-            console.error('Failed to copy text: ', err);
-            statusElement.textContent = 'Failed to copy code. Please copy it manually.';
-          });
-        }
       }
     }
 
@@ -1018,6 +1020,8 @@
       maxClientsContainer.classList.add('hidden');
       inputContainer.classList.add('hidden');
       messages.classList.remove('waiting');
+      codeSentToRandom = false;
+      button2.disabled = false;
     };
 
     document.getElementById('usernameInput').addEventListener('keydown', (event) => {
@@ -1060,13 +1064,17 @@
         setTimeout(() => {
           statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} connections)` : 'Waiting for connection...';
         }, 2000);
+        codeSentToRandom = true;
+        button2.disabled = true;
       } else {
         statusElement.textContent = 'Cannot send: Not initiator, no code, or room is full.';
       }
     };
 
     document.getElementById('button2').onclick = () => {
-      window.location.href = 'https://anonomoose.com/random.html';
+      if (!button2.disabled) {
+        window.location.href = 'https://anonomoose.com/random.html';
+      }
     };
 
     // Function to handle automatic connection with a code parameter
