--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     }
     @media (max-width: 640px) {
       .corner-logo {
-        position: fixed;
+        position: absolute;
         top: 10px;
         right: 10px;
         width: 128px;
