--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     @media (max-width: 640px) {
       .corner-logo {
         position: absolute;
-        top: 10px;
+        top: -230px; /* Adjusted to position above the white box */
         right: 10px;
         width: 128px;
         height: 128px;
