--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -66,8 +67,8 @@
     }
     @media (max-width: 640px) {
       .corner-logo {
-        position: absolute;
-        top: -230px; /* Adjusted to position above the white box */
+        position: fixed;
+        top: 10px;
         right: 10px;
         width: 128px;
         height: 128px;
