--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -73,6 +72,15 @@
         width: 128px;
         height: 128px;
         z-index: 1000; /* Ensure it stays above all content */
+      }
+      /* Specific logo positioning for waiting state on mobile */
+      #chatContainer:not(.hidden) #messages.waiting ~ .corner-logo {
+        position: absolute;
+        top: -138px; /* Moves logo above white box (128px height + 10px gap) */
+        right: 10px;
+        width: 128px;
+        height: 128px;
+        z-index: 1000;
       }
       #maxClientsContainer {
         position: fixed;
@@ -241,7 +249,7 @@
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
   <div class="corner-logo" id="cornerLogo"></div>
-  <div class="flex w-full max-w-lg">
+  <div class="flex w-full max-w-xl"> <!-- Increased max-width from max-w-lg to max-w-xl -->
     <div class="bg-white p-8 rounded-lg shadow-lg flex-grow">
       <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Anonomoose Chat</h1>
       <div id="status" class="text-center mb-4 text-gray-600">Start a new chat or connect to an existing one</div>
